# android_cmake_test

app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/imported-lib/: import-lib.c  import-lib.h
app/src/androidTest/java/com/example/hdc/myapplication/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/my-add/: my-add.cpp  my-add.h
app/src/main/java/com/example/hdc/myapplication/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/example/hdc/myapplication/: ExampleUnitTest.java
app/sublibs/: CMakeLists.txt  add1.c  add1.h  add2.c  add2.h
